index.css
html, body{
    height: 100%;
}
    .highlight {
        border-color: black;
        border: 2px dashed;
        background-color: lightgreen;
    }
    .black_overlay{
        display: none;
        position: absolute;
        top: 0%;
        left: 0%;
        width: 100%;
        height: 100%;
        background-color: black;
        z-index:1001;
        -moz-opacity: 0.8;
        opacity:.80;
        filter: alpha(opacity=80);
    }
    .white_content {
        display: none;
        position: absolute;
        width: auto;
        height: 35%;
        padding: 20px;
        border: 1px solid black;
        background-color: white;
        z-index:1002;
        overflow: auto;
        bottom: 0;
        right: 0;
        border-radius: 25px;
    }

